--- a/env.yaml
+++ b/env.yaml
@@ -6,7 +6,7 @@ metadata:
   annotations:
     harness.io/cicd-accountId: vpCkHKsDSxK9_KYfjCTMKA
     harness.io/cicd-orgId: default
-    harness.io/cicd-projectId: communityeng
+    harness.io/cicd-projectId: CD_Triggers_Automation
   tags:
     - java
   
