--- a/env.yaml
+++ b/env.yaml
@@ -4,7 +4,7 @@ metadata:
   name: demo-2
   description: demo
   annotations:
-    harness.io/cicd-accountId: vpCkHKsDSxK9_KYfjCTMKA
+    harness.io/cicd-accountId: 6h56F6WNQna2bDWBKfPMLw
     harness.io/cicd-orgId: default
     harness.io/cicd-projectId: Harnesspractise
   tags:
@@ -35,4 +35,4 @@ metadata:
 spec:
   type: service
   lifecycle: experimental
-  owner: team-a
+  owner: team-b
