--- a/environment.yaml
+++ b/environment.yaml
@@ -1,7 +1,7 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: demo
+  name: demo-1
   description: demo
   annotations:
     # mandatory annotation
