--- a/env.yaml
+++ b/env.yaml
@@ -4,6 +4,7 @@ metadata:
   name: demo-2
   description: demo
   annotations:
+    harness.io/project-url: https://github.com/Debanitrkl/backstage-test/blob/main/environment.yaml
     harness.io/cicd-accountId: 6h56F6WNQna2bDWBKfPMLw
     harness.io/cicd-orgId: default
     harness.io/cicd-projectId: Harnesspractise
