--- a/env.yaml
+++ b/env.yaml
@@ -4,8 +4,8 @@ metadata:
   name: demo-2
   description: demo
   annotations:
-    harness.io/project-url: https://github.com/Debanitrkl/backstage-test/blob/main/environment.yaml
-    harness.io/cicd-accountId: 6h56F6WNQna2bDWBKfPMLw
+    harness.io/project-url: https://app.harness.io/ng/#/account/vpCkHKsDSxK9_KYfjCTMKA/home/orgs/default/projects/communityeng/details
+    harness.io/cicd-accountId: vpCkHKsDSxK9_KYfjCTMKA
     harness.io/cicd-orgId: default
     harness.io/cicd-projectId: Harnesspractise
   tags:
