--- a/env.yaml
+++ b/env.yaml
@@ -1,8 +1,8 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: demo-2
-  description: demo
+  name: canary-backend-service
+  description: pipeline build and deploy
   annotations:
     harness.io/project-url: https://app.harness.io/ng/#/account/vpCkHKsDSxK9_KYfjCTMKA/ci/orgs/default/projects/
   tags:
