--- a/environment.yaml
+++ b/environment.yaml
@@ -5,10 +5,10 @@ metadata:
   description: demo
   annotations:
     # mandatory annotation
-    harness.io/project-url: https://app.harness.io/ng/#/account/vpCkHKsDSxK9_KYfjCTMKA/home/orgs/default/projects/communityeng
+    harness.io/project-url: https://app.harness.io/ng/#/account/vpCkHKsDSxK9_KYfjCTMKA/home/orgs/default/projects
     # optional annotations, don't include this block if not needed
-    harness.io/ci-pipelineIds: <pipelineId1,pipelineId2,pipelineId3 etc>
-    harness.io/cd-serviceId: <serviceId>
+    #harness.io/ci-pipelineIds: <pipelineId1,pipelineId2,pipelineId3 etc>
+    #harness.io/cd-serviceId: <serviceId>
   tags:
     - java
 
