--- a/env.yaml
+++ b/env.yaml
@@ -4,7 +4,7 @@ metadata:
   name: canary-backend-service
   description: pipeline build and deploy
   annotations:
-    harness.io/project-url: https://app.harness.io/ng/#/account/vpCkHKsDSxK9_KYfjCTMKA/ci/orgs/default/projects/communityeng/
+    harness.io/project-url: https://app.harness.io/gateway/pipeline/api/pipelines/summary/backstagedemo?accountIdentifier=vpCkHKsDSxK9_KYfjCTMKA&orgIdentifier=default&projectIdentifier=communityeng
   tags:
     - java
   
