--- a/catalog-harness-cicd.yaml
+++ b/catalog-harness-cicd.yaml
@@ -4,6 +4,7 @@ metadata:
   name: demo
   description: demo
   annotations:
+    harness.io/project-url: https://app.harness.io/ng/#/account/vpCkHKsDSxK9_KYfjCTMKA/cd/orgs/default/projects/communityeng/
     harness.io/cicd-accountId: vpCkHKsDSxK9_KYfjCTMKA
     harness.io/cicd-orgId: default
     harness.io/cicd-projectId: communityeng
