--- a/catalog-harness-cicd.yaml
+++ b/catalog-harness-cicd.yaml
@@ -5,11 +5,10 @@ metadata:
   description: demo
   annotations:
     harness.io/project-url: https://app.harness.io/ng/#/account/vpCkHKsDSxK9_KYfjCTMKA/cd/orgs/default/projects/communityeng/
-    harness.io/cicd-accountId: vpCkHKsDSxK9_KYfjCTMKA
-    harness.io/cicd-orgId: default
-    harness.io/cicd-projectId: communityeng
-    harness.io/ci-pipelineIds: <pipelineId1,pipelineId2,pipelineId3 etc>
-    harness.io/cd-serviceId: <serviceId>
+    harness.io/accountId: vpCkHKsDSxK9_KYfjCTMKA
+    harness.io/orgId: default
+    harness.io/projectId: communityeng
+
   tags:
     - java
   
