--- a/env1.yaml
+++ b/env1.yaml
@@ -1,7 +1,7 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: canary-backend-service2
+  name: canary-backend-service3
   description: pipeline build and deploy
   annotations:
        harness.io/project-url: https://app.harness.io/ng/#/account/6_vVHzo9Qeu9fXvj-AcbCQ/cf/orgs/default/projects/FF_Demo
@@ -33,4 +33,4 @@ metadata:
 spec:
   type: service
   lifecycle: experimental
-  owner: team-b
+  owner: team-c
