--- a/env3.yaml
+++ b/env3.yaml
@@ -4,7 +4,7 @@ metadata:
   name: canary-feature-flag
   description: pipeline build and deploy
   annotations:
-       harness.io/project-url: https://app.harness.io/ng/#/account/6_vVHzo9Qeu9fXvj-AcbCQ/cf/orgs/default/projects/FF_Demo
+       harness.io/project-url: https://app.harness.io/ng/#/account/vpCkHKsDSxK9_KYfjCTMKA/cf/orgs/STO/projects/STO_LAB/feature-flags
   tags:
     - java
   
@@ -33,4 +33,4 @@ metadata:
 spec:
   type: service
   lifecycle: experimental
-  owner: team-c
+  owner: team-cme-a
