--- a/newannot.yaml
+++ b/newannot.yaml
@@ -5,6 +5,9 @@ metadata:
   description: pipeline build and deploy
   annotations:
        harness.io/project-url: https://app.harness.io/ng/#/account/vpCkHKsDSxK9_KYfjCTMKA/cd/orgs/default/projects/PREQA_NG_Pipelines/
+       jira/project-key: <example-jira-project-key>
+       jira/component: <example-component> # optional, you might skip this value to fetch data for all components
+       jira/token-type: Bearer # optional, used for Activity stream feed. If you are using Basic auth you can skip this.
   tags:
     - java
   
