--- a/github.yaml
+++ b/github.yaml
@@ -5,7 +5,7 @@ metadata:
   description: pipeline build and deploy
   annotations:
        harness.io/project-url: https://app.harness.io/ng/#/account/vpCkHKsDSxK9_KYfjCTMKA/cd/orgs/default/projects/PREQA_NG_Pipelines/
-       github.com/project-slug: Debanitrkl/backstage-test
+       backstage.io/techdocs-ref: url:https://github.com/backstage/backstage/tree/master/plugins/techdocs-backend/examples/documented-component
   tags:
     - java
   
