--- a/gids-demo.yaml
+++ b/gids-demo.yaml
@@ -6,7 +6,7 @@ metadata:
   annotations:
        harness.io/project-url: https://app.harness.io/ng/#/account/vpCkHKsDSxK9_KYfjCTMKA/cd/orgs/default/projects/PREQA_NG_Pipelines/
        jira/project-key: IDP
-       github.com/project-slug: backstage/backstage
+       github.com/project-slug: harness/harness-core-ui
   tags:
     - java
   
@@ -35,4 +35,4 @@ metadata:
 spec:
   type: service
   lifecycle: experimental
-  owner: team-cme
+  owner: ccmplayacc
