--- a/gids-demo.yaml
+++ b/gids-demo.yaml
@@ -6,7 +6,7 @@ metadata:
   annotations:
        harness.io/project-url: https://app.harness.io/ng/#/account/vpCkHKsDSxK9_KYfjCTMKA/cd/orgs/default/projects/PREQA_NG_Pipelines/
        jira/project-key: IDP
-       github.com/project-slug: harness/harness-core-ui
+       github.com/project-slug: Debanitrkl/backstage-test
   tags:
     - java
   
