--- a/gids-demo.yaml
+++ b/gids-demo.yaml
@@ -7,6 +7,7 @@ metadata:
        harness.io/project-url: https://app.harness.io/ng/#/account/vpCkHKsDSxK9_KYfjCTMKA/cd/orgs/default/projects/PREQA_NG_Pipelines/
        jira/project-key: IDP
        github.com/project-slug: Debanitrkl/backstage-test
+       backstage.io/techdocs-ref: url:https://github.com/backstage/backstage/tree/master/plugins/techdocs-backend/examples/documented-component
   tags:
     - java
   
