--- a/gids-demo.yaml
+++ b/gids-demo.yaml
@@ -8,7 +8,7 @@ metadata:
        jira/project-key: IDP
        github.com/project-slug: Debanitrkl/backstage-test
        backstage.io/techdocs-ref: url:https://github.com/backstage/backstage/tree/master/plugins/techdocs-backend/examples/documented-component
-       pagerduty.com/service-id: PS5XKY7
+       pagerduty.com/service-id: P2J56G4
   tags:
     - java
   
