--- a/gids-demo.yaml
+++ b/gids-demo.yaml
@@ -9,6 +9,7 @@ metadata:
        github.com/project-slug: Debanitrkl/backstage-test
        backstage.io/techdocs-ref: url:https://github.com/backstage/backstage/tree/master/plugins/techdocs-backend/examples/documented-component
        pagerduty.com/service-id: P2J56G4
+       pagerduty.com/integration-key: R03DT3PRH1SU1J014M3FQDUQB53B4CUH
   tags:
     - java
   
