--- a/gids-demo.yaml
+++ b/gids-demo.yaml
@@ -4,7 +4,7 @@ metadata:
   name: Harness-Internal-Developer-Portal
   description: pipeline build and deploy
   annotations:
-       harness.io/project-url: https://app.harness.io/ng/#/account/vpCkHKsDSxK9_KYfjCTMKA/cd/orgs/default/projects/PREQA_NG_Pipelines/
+       harness.io/project-url: https://app.harness.io/ng/account/vpCkHKsDSxK9_KYfjCTMKA/cd/orgs/default/projects/PREQA_NG_Pipelines/
        jira/project-key: IDP
        github.com/project-slug: Debanitrkl/backstage-test
        backstage.io/techdocs-ref: url:https://github.com/backstage/backstage/tree/master/plugins/techdocs-backend/examples/documented-component
