--- a/gids-demo.yaml
+++ b/gids-demo.yaml
@@ -1,7 +1,7 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: Harness-Internal-Developer-Portal
+  name: demo-service
   description: pipeline build and deploy
   annotations:
        harness.io/project-url: https://app.harness.io/ng/account/vpCkHKsDSxK9_KYfjCTMKA/cd/orgs/default/projects/PREQA_NG_Pipelines/
