--- a/video-demo.yaml
+++ b/video-demo.yaml
@@ -1,7 +1,7 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: demo-service
+  name: service-demo
   description: this is a demo service
   annotations:
       harness.io/project-url: "https://app.harness.io/ng/account/vpCkHKsDSxK9_KYfjCTMKA/cd/orgs/default/projects/PREQA_NG_Pipelines/pipelines"
