--- a/video-demo.yaml
+++ b/video-demo.yaml
@@ -1,7 +1,7 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: Github-pull-req-board
+  name: demo-service
   description: pipeline build and deploy
   annotations:
        harness.io/project-url: https://app.harness.io/ng/#/account/vpCkHKsDSxK9_KYfjCTMKA/cd/orgs/default/projects/PREQA_NG_Pipelines
@@ -10,7 +10,6 @@ metadata:
        grafana/alert-label-selector: "destination=sto-prod-slack"
        grafana/overview-dashboard: "https://grafana.harness.io/d/-zsEc0J4k/sto-core-and-ticket-service?orgId=1"
        jira/project-key: IDP
-       pagerduty.com/service-id: PS5XKY7
   tags:
     - java
   
