--- a/video-demo.yaml
+++ b/video-demo.yaml
@@ -10,6 +10,7 @@ metadata:
        grafana/alert-label-selector: "destination=sto-prod-slack"
        grafana/overview-dashboard: "https://grafana.harness.io/d/-zsEc0J4k/sto-core-and-ticket-service?orgId=1"
        jira/project-key: IDP
+       pagerduty.com/service-id: PFVOX97
   tags:
     - java
   
