--- a/temp-new-trigger.yaml
+++ b/temp-new-trigger.yaml
@@ -2,7 +2,7 @@ apiVersion: scaffolder.backstage.io/v1beta3
 kind: Template
 metadata:
   name: react-app
-  title: Create a new service
+  title: Test New Custom Actions
   description: A template to create a new service
   tags:
     - nextjs
