--- a/temp-new-trigger.yaml
+++ b/temp-new-trigger.yaml
@@ -1,7 +1,7 @@
 apiVersion: scaffolder.backstage.io/v1beta3
 kind: Template
 metadata:
-  name: react-app
+  name: test-CA
   title: Test New Custom Actions
   description: A template to create a new service
   tags:
