--- a/test-new-custom-actions.yaml
+++ b/test-new-custom-actions.yaml
@@ -1,7 +1,7 @@
 apiVersion: scaffolder.backstage.io/v1beta3
 kind: Template
 metadata:
-  name: Test New Custom Action
+  name: New-custom-action
   title: Test the new custom action
   description: A template to test the new custom action
   tags:
