--- a/demo.yaml
+++ b/demo.yaml
@@ -1,8 +1,8 @@
 apiVersion: scaffolder.backstage.io/v1beta3
 kind: Template
 metadata:
-  name: New-custom-action
-  title: Test the new custom action
+  name: demo-tags
+  title: Test the tags and key value pair
   description: A template to test the new custom action
   tags:
     - nextjs
