--- a/demo-final.yaml
+++ b/demo-final.yaml
@@ -1,7 +1,7 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: demo-service-deba-final
+  name: demo-service-deba-without-module
   description: pipeline build and deploy
   annotations:
        harness.io/pipelines: |
