--- a/demo-tech-docs.yaml
+++ b/demo-tech-docs.yaml
@@ -7,7 +7,7 @@ metadata:
        harness.io/project-url: https://app.harness.io/ng/account/vpCkHKsDSxK9_KYfjCTMKA/cd/orgs/default/projects/PREQA_NG_Pipelines/
        jira/project-key: IDP
        github.com/project-slug: Debanitrkl/backstage-test
-       backstage.io/techdocs-ref: url:https://github.com/backstage/demo/tree/master
+       backstage.io/techdocs-ref: url:https://github.com/mkdocs/mkdocs
        pagerduty.com/service-id: P09N5FE
        pagerduty.com/integration-key: R03DT3PRH1SU1J014M3FQDUQB53B4CUH
   tags:
