Update pipeline demo-gitsync

--- a/.harness/demogitsync.yaml
+++ b/.harness/demogitsync.yaml
@@ -26,18 +26,7 @@ pipeline:
                   spec:
                     connectorType: Github
                     connectorRef: account.debagithub
-                    organization: <+pipeline.variables.organisation>
-                    repository: <+pipeline.variables.repository>
+                    organization: Debanitrkl
+                    repository: test-demo-asssssdfffff
                     repoType: public
         tags: {}
-  variables:
-    - name: organisation
-      type: String
-      description: ""
-      required: false
-      value: <+input>
-    - name: repository
-      type: String
-      description: ""
-      required: false
-      value: <+input>
