--- a/user.yaml
+++ b/user.yaml
@@ -1,7 +1,7 @@
 apiVersion: backstage.io/v1alpha1
 kind: User
 metadata:
-  name: Debabrata Panigrahi
+  name: debabrata
 spec:
   profile:
     displayName: Deba
