--- a/user-backstage-example.yaml
+++ b/user-backstage-example.yaml
@@ -1,10 +1,22 @@
 apiVersion: backstage.io/v1alpha1
 kind: User
 metadata:
-  name: jdoe
+  name: debabrata.panigrahi
+relations:
+  - type: memberOf
+    targetRef: group:default/harness_account_all_users
+    target:
+      kind: group
+      namespace: default
+      name: harness_account_all_users
+  - type: memberOf
+    targetRef: group:default/users
+    target:
+      kind: group
+      namespace: default
+      name: users
 spec:
   profile:
-    displayName: Jenny Doe
-    email: jenny-doe@example.com
-    picture: https://example.com/staff/jenny-with-party-hat.jpeg
-  memberOf: [team-b, employees]
+    displayName: Debabrata Panigrahi
+    email: debabrata.panigrahi@harness.io
+  memberOf: []
