Update service demo-service

--- a/.harness/demoservice.yaml
+++ b/.harness/demoservice.yaml
@@ -3,3 +3,6 @@ service:
   identifier: demoservice
   orgIdentifier: default
   projectIdentifier: idpprojectsc
+  serviceDefinition:
+    spec: {}
+    type: Kubernetes
