--- a/demo-catalog/demo-tech-docs.yaml
+++ b/demo-catalog/demo-tech-docs.yaml
@@ -1,7 +1,7 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: demo-service
+  name: demo-service-tech-docs
   description: pipeline build and deploy
   annotations:
        harness.io/pipeline-url: |
