--- a/upload-file-prod.yaml
+++ b/upload-file-prod.yaml
@@ -16,7 +16,7 @@ spec:
         uploaded_file:
           title: Upload File
           type: string
-          format: file
+          format: data-url
           description: Upload a file that will be processed in the workflow
           ui:backstage:
             review:
